Fix toolbar behavior on small devices

--- a/src/index.css
+++ b/src/index.css
@@ -3,17 +3,11 @@
 html, body {
   font-family: 'Muli';
   margin: 0;
-  height: 100%;
   background-color: #222222;
 }
 
 .body {
   overflow: hidden;
-}
-
-#app {
-  width: 100%;
-  height: 100%;
 }
 
 button {
